2011-03-04  John Bauman  <jbauman@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] premultipliedAlpha WebGL context attribute is ignored.
        https://bugs.webkit.org/show_bug.cgi?id=55411

        Add test case for (non-)premultiplied-alpha compositing.

        * compositing/webgl/webgl-nonpremultiplied-blend.html: Added.
        * platform/chromium-gpu/compositing/webgl/webgl-nonpremultiplied-blend-expected.checksum: Added.
        * platform/chromium-gpu/compositing/webgl/webgl-nonpremultiplied-blend-expected.png: Added.
        * platform/chromium-gpu/compositing/webgl/webgl-nonpremultiplied-blend-expected.txt: Added.
        * platform/mac-wk2/Skipped:
        * platform/mac/Skipped:

2011-03-04  Jessie Berlin  <jberlin@apple.com>

        [Snow Leopard Release Tests] accessibility/plugin.html,
        compositing/geometry/empty-embed-rects.html, and fast/loader/loadInProgress.html timing out.
        https://bugs.webkit.org/show_bug.cgi?id=55805
        https://bugs.webkit.org/show_bug.cgi?id=55807
        https://bugs.webkit.org/show_bug.cgi?id=55808

        Unreviewed. Add these tests to the Snow Leopard skipped list to get the bots green.

        * platform/mac-snowleopard/Skipped:

2011-03-04  Tony Gentilcore  <tonyg@chromium.org>

        [chromium] Fail new test for JSC feature introduced by r80378
        https://bugs.webkit.org/show_bug.cgi?id=55801

        * platform/chromium/test_expectations.txt:

2011-03-04  Adrienne Walker  <enne@google.com>

        Reviewed by James Robinson.

        Turn on pixel tests for huge-layer-img.html for better test coverage.
        https://bugs.webkit.org/show_bug.cgi?id=55679

        Also, modify this test to be more pixel test friendly.

        * compositing/tiling/huge-layer-img-expected.checksum: Added.
        * compositing/tiling/huge-layer-img-expected.png: Added.
        * compositing/tiling/huge-layer-img-expected.txt: Added.
        * compositing/tiling/huge-layer-img.html: